2009-02-14  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gdk-2.0/:
	* vapi/packages/gtk+-2.0/:
	* vapi/packages/libsoup-2.4/:

	Nullable fixes, patch by Mark Lee, fixes bug 571407

	* vapi/gdk-2.0.vapi:
	* vapi/gtk+-2.0.vapi:
	* vapi/libsoup-2.4.vapi:

	Regenerated

2009-02-14  Jürg Billeter  <j@bitron.ch>

	* vala/valacodewriter.vala:

	Add error domains to VAPI files, fixes bug 571692

2009-02-13  Ryan Lortie  <desrt@desrt.ca>

	* gobject/valamethodmodule.vala:

	Emit 'default:' label with g_assert_not_reached() for async state
	switch statement (to avoid GCC warning).  Don't emit virtual functions
	or vtable entries for synchronous functions when emitting async code.

2009-02-13  Ryan Lortie  <desrt@desrt.ca>

	Bug 571484 – free owned result even if _finish isn't called

	* gobject/valagasyncmodule.vala:

	Emit code to free the result in the result in the event that _finish
	was not called.

2009-02-12  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala:
	* vala/valaconstant.vala:
	* vala/valafield.vala:
	* vala/valamember.vala:
	* vala/valamethod.vala:
	* vala/valaproperty.vala:
	* vala/valastruct.vala:

	Warn when hiding members, support `new' keyword to suppress
	warning, based on patch by Andreas Brauchli, fixes bug 567743

	* vala/valacodenode.vala:
	* vala/valacreationmethod.vala:
	* vala/valaenum.vala:
	* vala/valaerrordomain.vala:
	* vala/valanamespace.vala:
	* ccode/valaccodelinedirective.vala:

	Avoid hidden members

2009-02-12  Jürg Billeter  <j@bitron.ch>

	* vala/valastruct.vala:
	* vala/valasymbolresolver.vala:

	Add base_struct property to Struct class, patch by Andreas Brauchli

2009-02-12  Jürg Billeter  <j@bitron.ch>

	* vala/valamember.vala:
	* vala/valaparser.vala:

	Support `new' as member modifier in parser to prepare support for
	hiding members, patch by Andreas Brauchli

2009-02-12  Ryan Lortie  <desrt@desrt.ca>

	* vala/valamethod.vala:

	For now, just forbid ref/out paramters on yielding functions since
	they are hard to deal with.
